Config done for discovery service, must update other services config to be registered

--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=discovery-service
+server.port=8761
+#no self registration as a client
+eureka.client.fetch-registry=false
+#no self registration in the service registry
+eureka.client.register-with-eureka=false
