--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -4,11 +4,10 @@ spring:
       mvc:
         routes:
           - id: r1
-            uri: http://localhost:8081
+            uri: lb://CUSTOMER-SERVICE
             predicates:
               - Path=/api/customers/**
           - id: r2
-            uri: http://localhost:8082
+            uri: lb://INVENTORY-SERVICE
             predicates:
               - Path=/api/products/**
-#Exemple of static setup
